--- a/src/main/resources/templates/GoodOrderAdd.html
+++ b/src/main/resources/templates/GoodOrderAdd.html
@@ -105,6 +105,10 @@
             <div>
             <span>身份证号码：</span>
             <input type="text" name="sfz">
+            <select name="lb" style="height: 30px">
+            	<option value="1">个人</option>
+            	<option value="2">团队</option>
+            </select>
             <input type="button" id="xd" value="立即下单" class="btn btn-primary  text-uppercase" style="float: right;width: 170px;">
             </div>
           </div>
@@ -156,6 +160,7 @@
 										alert("请先输入身份证号码！");
 										return false;
 									}
+									var lb=$("[name='lb']").val();
 									var ps=[];
 									var zj=$("[name='price']").val();
 									$("[type='checkbox']").each(function(i,obj){
@@ -171,6 +176,7 @@
 											vps.name1=name1;
 											vps.name2=zj,
 											vps.name3=sfz,
+											vps.name4=lb,
 											ps.push(vps);
 										}
 									})
